--- a/prepros.cfg
+++ b/prepros.cfg
@@ -194,6 +194,67 @@
           "imported": false,
           "parents": [],
           "type": "sass"
+        },
+        "b6a4cb36": {
+          "id": "b6a4cb36",
+          "path": "sassy/README.md",
+          "output": "sassy/README.html",
+          "name": "README.md",
+          "category": "HTML",
+          "autoCompile": true,
+          "sanitize": false,
+          "gfm": true,
+          "wrapWithHtml": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "markdown"
+        },
+        "08103a60": {
+          "id": "08103a60",
+          "path": "sassy/sassy.html",
+          "output": "sassy/sassy.html",
+          "name": "sassy.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "437ac585": {
+          "id": "437ac585",
+          "path": "sassy/css/mixin.css",
+          "output": "sassy/css/mixin.min.css",
+          "name": "mixin.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": true,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "137d85c4": {
+          "id": "137d85c4",
+          "path": "sassy/css/mixin.scss",
+          "output": "sassy/css/mixin.css",
+          "name": "mixin.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": true,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
